# card-games-env

./: README.md  pyproject.toml
examples/: run_kuhn_random.py
src/card_games_env/: __init__.py  cli.py
src/card_games_env/core/: cards.py  env.py
src/card_games_env/envs/: kuhn_poker.py  texas_holdem.py
src/card_games_env/wrappers/: text.py
tests/: test_kuhn.py
