[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "card-games-env"
version = "0.1.0"
description = "Мультиагентные окружения карточных игр (Кун-покер и др.) для обучения RL/LLM"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "Your Name", email = "you@example.com" }
]
dependencies = [
  "numpy>=1.24",
  "eval7>=0.2.0",
  "typing-extensions>=4.5"
]

[project.urls]
Homepage = "https://example.com/card-games-env"
Repository = "https://example.com/card-games-env/repo"

[project.scripts]
cge-run = "card_games_env.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["card_games_env*"]


